--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,91 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+asttokens==2.2.1
+    # via stack-data
+backcall==0.2.0
+    # via ipython
 certifi==2023.5.7
     # via requests
 charset-normalizer==3.1.0
     # via requests
+comm==0.1.3
+    # via ipykernel
 conllu==4.5.2
     # via -r requirements.in
+debugpy==1.6.7
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
 deepl==1.14.0
     # via -r requirements.in
+executing==1.2.0
+    # via stack-data
 idna==3.4
     # via requests
+ipykernel==6.23.0
+    # via -r requirements.in
+ipython==8.13.2
+    # via ipykernel
+jedi==0.18.2
+    # via ipython
+jupyter-client==8.2.0
+    # via ipykernel
+jupyter-core==5.3.0
+    # via
+    #   ipykernel
+    #   jupyter-client
+matplotlib-inline==0.1.6
+    # via
+    #   ipykernel
+    #   ipython
+nest-asyncio==1.5.6
+    # via ipykernel
+packaging==23.1
+    # via ipykernel
+parso==0.8.3
+    # via jedi
+pexpect==4.8.0
+    # via ipython
+pickleshare==0.7.5
+    # via ipython
+platformdirs==3.5.1
+    # via jupyter-core
+prompt-toolkit==3.0.38
+    # via ipython
+psutil==5.9.5
+    # via ipykernel
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.2
+    # via stack-data
+pygments==2.15.1
+    # via ipython
+python-dateutil==2.8.2
+    # via jupyter-client
+pyzmq==25.0.2
+    # via
+    #   ipykernel
+    #   jupyter-client
 requests==2.30.0
     # via deepl
+six==1.16.0
+    # via python-dateutil
+stack-data==0.6.2
+    # via ipython
+tornado==6.3.1
+    # via
+    #   ipykernel
+    #   jupyter-client
+traitlets==5.9.0
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
 urllib3==2.0.2
     # via requests
+wcwidth==0.2.6
+    # via prompt-toolkit
