--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,8 @@ tornado==6.3.1
     # via
     #   ipykernel
     #   jupyter-client
+tqdm==4.65.0
+    # via -r requirements.in
 traitlets==5.9.0
     # via
     #   comm
